# py-movie-api

./: pyproject.toml
app/: settings.py  urls.py
cinema/: models.py  serializers.py  views.py
cinema/migrations/: 0001_initial.py  0002_alter_movie_title.py
